--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Hello!</h1>
+<h1> Learn Colors with Olly support page</h1>
+<hr/>
+<div>
+  <p>
+    <b>Learn Colors with Olly</b> is an educational game for kids. The game is designed to help kids learn basic colors and train their visual memory.
+  </p>
+  <p>
+    Your feedback is welcome at aetsyss@gmail.com
+  </p>
+  <hr/>
+  <p>
+    2022 Aleksei Tsyss
+  </p>
+</div>
